fix for background image not displaying on website

--- a/src/main/resources/templates/auth/home.html
+++ b/src/main/resources/templates/auth/home.html
@@ -8,7 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .world-image {
-            background-image: url('/templates/images/Earth.jpg');
+            background-image: url('/images/Earth.jpg');
             background-size: cover;
             background-position: center;
             height: calc(100vh - 56px);
