--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .world-image {
-            background-image: url('images/Earth.jpg');
+            background-image: url('/images/Earth.jpg');
             background-size: cover;
             background-position: center;
             height: calc(100vh - 56px);
@@ -16,7 +16,7 @@
 </head>
 <body class="world-image">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index">Vaccine Man World Query</a>
+    <a class="navbar-brand" href="index">World Hopping MPO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
