--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .world-image {
-            background-image: url('images/Earth.jpg');
+            background-image: url('/images/Earth.jpg');
             background-size: cover;
             background-position: center;
             height: calc(100vh - 56px);
@@ -29,7 +29,7 @@
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Vaccine Man World Query</a>
+    <a class="navbar-brand" href="#">World Hopping MPO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
