--- a/src/main/resources/templates/auth/my-account.html
+++ b/src/main/resources/templates/auth/my-account.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MySQL World Database Query</title>
+    <title>My Account</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .world-image {
@@ -24,20 +24,19 @@
             text-align: center;
             font-weight: bold;
         }
-        .card-deck {
-            margin-top: 20px;
-        }
-        .card img {
-            height: 200px;
-            object-fit: cover;
-        }
-        .cards-container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 100%;
+        .account-card {
+            margin: 20px auto;
+            max-width: 500px;
             padding: 20px;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .account-card h2 {
+            margin-bottom: 20px;
+        }
+        .form-group {
+            margin-bottom: 15px;
         }
         .navbar-nav .nav-item {
             display: flex;
@@ -64,15 +63,15 @@
             </span>
         </span>
         <ul class="navbar-nav ml-auto">
-            <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link" href="secure/manage-users">Manage Users</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/auth/my-account">My Account</a>
+                <a class="nav-link" href="login">My Account</a>
             </li>
             <li class="nav-item">
-                <form action="/logout" method="post" class = "form-inline">
-                    <input type = "hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                <form action="/logout" method="post" class="form-inline">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     <button type="submit" class="btn btn-link nav-link">Log Out</button>
                 </form>
             </li>
@@ -82,35 +81,20 @@
 
 <div class="container-fluid p-0">
     <div class="world-image">
-        <div class="cards-container">
-            <div class="card-deck">
-                <div class="card">
-                    <a href="/countries">
-                        <img src="/images/countries.jpg" class="card-img-top" alt="Countries">
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title">Countries</h5>
-                        <p class="card-text">Explore information about various countries.</p>
+        <div class="d-flex justify-content-center align-items-center h-100">
+            <div class="account-card">
+                <h2>My Account</h2>
+                <form>
+                    <div class="form-group">
+                        <label for="email">Change Email Address</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter new email">
                     </div>
-                </div>
-                <div class="card">
-                    <a href="/cities">
-                        <img src="/images/cities.jpg" class="card-img-top" alt="Cities">
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title">Cities</h5>
-                        <p class="card-text">Discover details about different cities.</p>
+                    <div class="form-group">
+                        <label for="password">Change Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Enter new password">
                     </div>
-                </div>
-                <div class="card">
-                    <a href="/languages">
-                        <img src="/images/languages.jpg" class="card-img-top" alt="Languages">
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title">Languages</h5>
-                        <p class="card-text">Learn about various languages spoken around the world.</p>
-                    </div>
-                </div>
+                    <button type="submit" class="btn btn-primary">Update</button>
+                </form>
             </div>
         </div>
         <div class="about-section">
