added functionality to remove user from website if admin

--- a/src/main/resources/templates/auth/my-account.html
+++ b/src/main/resources/templates/auth/my-account.html
@@ -71,7 +71,7 @@
                 <a class="nav-link" href="secure/manage-users">Manage Users</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="login">My Account</a>
+                <a class="nav-link" href="#">My Account</a>
             </li>
             <li class="nav-item">
                 <form action="/logout" method="post" class="form-inline">
