--- a/src/main/resources/templates/auth/secure/manage-users.html
+++ b/src/main/resources/templates/auth/secure/manage-users.html
@@ -65,7 +65,7 @@
         </span>
         <ul class="navbar-nav ml-auto">
             <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
-                <a class="nav-link" href="secure/manage-users">Manage Users</a>
+                <a class="nav-link" href="#">Manage Users</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/auth/my-account">My Account</a>
@@ -106,9 +106,9 @@
                     </form>
                 </td>
                 <td>
-                    <form th:action="@{/something}" method="post">
+                    <form th:action="@{/auth/secure/delete-user}" method="post">
                         <input type="hidden" name="userId" th:value="${user.id}"/>
-                        <button type="button" class="btn btn-danger">Delete User</button>
+                        <button type="submit" class="btn btn-danger">Delete User</button>
                     </form>
                 </td>
             </tr>
