--- a/src/main/resources/templates/auth/countries/new.html
+++ b/src/main/resources/templates/auth/countries/new.html
@@ -11,7 +11,7 @@
     <h1>Create a Country</h1>
 
     <section>
-        <form th:action="@{/countries/new}" method="post" th:object="${country}">
+        <form th:action="@{/templates/auth/countries/new}" method="post" th:object="${country}">
             <fieldset>
                 <legend>Country Information</legend>
                 <div class="form-group">
