--- a/src/main/resources/templates/auth/home.html
+++ b/src/main/resources/templates/auth/home.html
@@ -85,7 +85,7 @@
         <div class="cards-container">
             <div class="card-deck">
                 <div class="card">
-                    <a href="/countries">
+                    <a href="/auth/countries/">
                         <img src="/images/countries.jpg" class="card-img-top" alt="Countries">
                     </a>
                     <div class="card-body">
