--- a/src/main/resources/templates/auth/my-account.html
+++ b/src/main/resources/templates/auth/my-account.html
@@ -108,7 +108,7 @@
     <div class="world-image">
         <div class="d-flex justify-content-center align-items-center h-100">
             <div class="account-card">
-                <img src="/path/to/profile-image.jpg" alt="Profile Image" class="profile-image">
+                <img src="/images/blank-picture.jpg" alt="Profile Image" class="profile-image">
                 <h2 th:text="${#authentication.principal.username}">My Account</h2>
                 <div class="form-group">
                     <p id="currentUsername" class="form-control-plaintext" th:text="'Username: ' + ${#authentication.principal.username}"></p>
