added permissions to country endpoints

--- a/src/main/resources/templates/auth/home.html
+++ b/src/main/resources/templates/auth/home.html
@@ -39,6 +39,16 @@
             width: 100%;
             padding: 20px;
         }
+        .navbar{
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 10;
+        }
+        body{
+            padding-top: 56px;
+            margin: 0;
+        }
         .navbar-nav .nav-item {
             display: flex;
             align-items: center;
