--- a/src/main/resources/templates/auth/my-account.html
+++ b/src/main/resources/templates/auth/my-account.html
@@ -63,6 +63,16 @@
             padding: 0;
             font-size: 1rem;
         }
+        .navbar{
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 10;
+        }
+        body{
+            padding-top: 56px;
+            margin: 0;
+        }
         .navbar-nav .nav-item {
             display: flex;
             align-items: center;
