--- a/src/main/resources/templates/auth/countries/list.html
+++ b/src/main/resources/templates/auth/countries/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +11,57 @@
             overflow: hidden;
             text-overflow: ellipsis;
         }
+        .navbar{
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 10;
+        }
+        body{
+            padding-top: 56px;
+            margin: 0;
+        }
+        .navbar-nav .nav-item {
+            display: flex;
+            align-items: center;
+        }
+        .navbar-nav .nav-item .btn-link {
+            padding: 0;
+            margin: 0;
+        }
     </style>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/auth/home">World Hopping MPO</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <span class="navbar-text mr-auto">
+            <span th:if="${#authentication.principal != null}">
+                Welcome, <span th:text="${#authentication.principal.username}">User</span>!
+            </span>
+        </span>
+        <ul class="navbar-nav ml-auto">
+            <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
+                <a class="nav-link" href="#">Manage Users</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/auth/my-account">My Account</a>
+            </li>
+            <li class="nav-item">
+                <form action="/logout" method="post" class = "form-inline">
+                    <input type = "hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                    <button type="submit" class="btn btn-link nav-link">Log Out</button>
+                </form>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 <div class="container mt-5">
     <h1 class="mb-4">List of Countries</h1>
 
@@ -29,7 +77,7 @@
         </div>
     </form>
 
-    <a href="/countries/new" class="btn btn-success mb-4">Create Country</a>
+    <a sec:authorize="hasRole('ROLE_ADMIN')" href="/auth/countries/new" class="btn btn-success mb-4">Create Country</a>
 
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
