--- a/src/main/resources/templates/auth/countries/new.html
+++ b/src/main/resources/templates/auth/countries/new.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +7,39 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/auth/home">World Hopping MPO</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <span class="navbar-text mr-auto">
+            <span th:if="${#authentication.principal != null}">
+                Welcome, <span th:text="${#authentication.principal.username}">User</span>!
+            </span>
+        </span>
+        <ul class="navbar-nav ml-auto">
+            <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
+                <a class="nav-link" href="#">Manage Users</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/auth/my-account">My Account</a>
+            </li>
+            <li class="nav-item">
+                <form action="/logout" method="post" class = "form-inline">
+                    <input type = "hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                    <button type="submit" class="btn btn-link nav-link">Log Out</button>
+                </form>
+            </li>
+        </ul>
+    </div>
+</nav>
 <div class="container mt-5">
     <h1>Create a Country</h1>
 
     <section>
-        <form th:action="@{/templates/auth/countries/new}" method="post" th:object="${country}">
+        <form th:action="@{/auth/countries/new}" method="post" th:object="${country}">
             <fieldset>
                 <legend>Country Information</legend>
                 <div class="form-group">
@@ -84,7 +112,7 @@
                 </p>
             </fieldset>
         </form>
-        <a href="/countries" class="btn btn-secondary">Back to List</a>
+        <a href="/auth/countries" class="btn btn-secondary">Back to List</a>
     </section>
 </div>
 </body>
