--- a/src/main/resources/templates/auth/countries/list.html
+++ b/src/main/resources/templates/auth/countries/list.html
@@ -11,13 +11,13 @@
             overflow: hidden;
             text-overflow: ellipsis;
         }
-        .navbar{
+        .navbar {
             position: fixed;
             width: 100%;
             top: 0;
             z-index: 10;
         }
-        body{
+        body {
             padding-top: 56px;
             margin: 0;
         }
@@ -53,8 +53,8 @@
                 <a class="nav-link" href="/auth/my-account">My Account</a>
             </li>
             <li class="nav-item">
-                <form action="/logout" method="post" class = "form-inline">
-                    <input type = "hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                <form action="/logout" method="post" class="form-inline">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     <button type="submit" class="btn btn-link nav-link">Log Out</button>
                 </form>
             </li>
@@ -79,6 +79,10 @@
 
     <a sec:authorize="hasRole('ROLE_ADMIN')" href="/auth/countries/new" class="btn btn-success mb-4">Create Country</a>
 
+    <a href="/auth/countries/no-head-of-state" class="btn btn-warning mb-4">Show Countries with No Head of State</a>
+
+
+
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
@@ -99,7 +103,7 @@
             </thead>
             <tbody>
             <tr th:each="country : ${countries}">
-                <td th:text="${country.code}">Code></td>
+                <td th:text="${country.code}">Code</td>
                 <td><a th:href="@{/auth/countries/details/{id}(id=${country.code})}" th:text="${country.name}">Name</a></td>
                 <td th:text="${country.continent}">Continent</td>
                 <td th:text="${country.region}">Region</td>
@@ -114,7 +118,9 @@
             </tr>
             </tbody>
         </table>
+        <a href="/auth/countries" class="btn btn-info">Show All Countries</a>
     </div>
 </div>
+
 </body>
 </html>
