showcase countries with most cities

--- a/src/main/resources/templates/auth/countries/list.html
+++ b/src/main/resources/templates/auth/countries/list.html
@@ -81,7 +81,7 @@
 
     <a href="/auth/countries/no-head-of-state" class="btn btn-warning mb-4">Show Countries with No Head of State</a>
 
-
+    <a href="/auth/countries/most-cities" class="btn btn-info mb-4">Show Countries with Most Cities</a>
 
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
