unit tests for UserService

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="about-section">
-            <small>&copy; 2024 Sparta Global Vaccine Man Group. All rights reserved.</small>
+            <small>&copy; 2024 Sparta Global World Hopping MPO. All rights reserved.</small>
         </div>
     </div>
 </div>
