--- a/src/main/resources/templates/auth/countries/edit.html
+++ b/src/main/resources/templates/auth/countries/edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,79 +37,89 @@
 <div class="container mt-5">
     <h1 class="mb-4">Edit Country</h1>
 
-    <!-- Display validation errors if there are any -->
     <div th:if="${#fields.hasGlobalErrors()}" class="alert alert-danger">
         <ul>
-            <li th:each="error : ${#fields.errors()}">
-                <span th:text="${error}"></span>
-            </li>
+            <li th:each="error : ${#fields.globalErrors()}" th:text="${error}"></li>
         </ul>
     </div>
 
-    <form th:action="@{/auth/countries/edit/{id}(id=${country.code})}" method="post" th:object="${country}">
-        <input type="hidden" name="_method" value="put" /> <!-- This is for PUT method emulation -->
+    <form th:action="@{/auth/countries/edit/{code}(code=${country.code})}" method="post" th:object="${country}">
+        <input type="hidden" name="_method" value="post" />
+        <input type="hidden" name="code" th:value="${country.code}" />
 
         <div class="form-group">
             <label for="name">Country Name</label>
-            <input type="text" id="name" name="name" class="form-control" th:value="${country.name}" required />
+            <input type="text" id="name" name="name" class="form-control" th:value="${country.name}" />
+            <div th:if="${#fields.hasErrors('name')}" class="invalid-feedback" th:errors="*{name}"></div>
         </div>
 
         <div class="form-group">
             <label for="continent">Continent</label>
-            <input type="text" id="continent" name="continent" class="form-control" th:value="${country.continent}" required />
+            <input type="text" id="continent" name="continent" class="form-control" th:value="${country.continent}" />
+            <div th:if="${#fields.hasErrors('continent')}" class="invalid-feedback" th:errors="*{continent}"></div>
         </div>
 
         <div class="form-group">
             <label for="region">Region</label>
-            <input type="text" id="region" name="region" class="form-control" th:value="${country.region}" required />
+            <input type="text" id="region" name="region" class="form-control" th:value="${country.region}" />
+            <div th:if="${#fields.hasErrors('region')}" class="invalid-feedback" th:errors="*{region}"></div>
         </div>
 
         <div class="form-group">
             <label for="surfaceArea">Surface Area</label>
-            <input type="number" id="surfaceArea" name="surfaceArea" class="form-control" step="0.01" th:value="${country.surfaceArea}" required />
+            <input type="number" id="surfaceArea" name="surfaceArea" class="form-control" step="0.01" th:value="${country.surfaceArea}" />
+            <div th:if="${#fields.hasErrors('surfaceArea')}" class="invalid-feedback" th:errors="*{surfaceArea}"></div>
         </div>
 
         <div class="form-group">
             <label for="indepYear">Independence Year</label>
             <input type="number" id="indepYear" name="indepYear" class="form-control" th:value="${country.indepYear}" />
+            <div th:if="${#fields.hasErrors('indepYear')}" class="invalid-feedback" th:errors="*{indepYear}"></div>
         </div>
 
         <div class="form-group">
             <label for="population">Population</label>
-            <input type="number" id="population" name="population" class="form-control" th:value="${country.population}" required />
+            <input type="number" id="population" name="population" class="form-control" th:value="${country.population}" />
+            <div th:if="${#fields.hasErrors('population')}" class="invalid-feedback" th:errors="*{population}"></div>
         </div>
 
         <div class="form-group">
             <label for="lifeExpectancy">Life Expectancy</label>
             <input type="number" id="lifeExpectancy" name="lifeExpectancy" class="form-control" step="0.1" th:value="${country.lifeExpectancy}" />
+            <div th:if="${#fields.hasErrors('lifeExpectancy')}" class="invalid-feedback" th:errors="*{lifeExpectancy}"></div>
         </div>
 
         <div class="form-group">
             <label for="localName">Local Name</label>
-            <input type="text" id="localName" name="localName" class="form-control" th:value="${country.localName}" required />
+            <input type="text" id="localName" name="localName" class="form-control" th:value="${country.localName}" />
+            <div th:if="${#fields.hasErrors('localName')}" class="invalid-feedback" th:errors="*{localName}"></div>
         </div>
 
         <div class="form-group">
             <label for="governmentForm">Government Form</label>
-            <input type="text" id="governmentForm" name="governmentForm" class="form-control" th:value="${country.governmentForm}" required />
+            <input type="text" id="governmentForm" name="governmentForm" class="form-control" th:value="${country.governmentForm}" />
+            <div th:if="${#fields.hasErrors('governmentForm')}" class="invalid-feedback" th:errors="*{governmentForm}"></div>
         </div>
 
         <div class="form-group">
             <label for="headOfState">Head of State</label>
             <input type="text" id="headOfState" name="headOfState" class="form-control" th:value="${country.headOfState}" />
+            <div th:if="${#fields.hasErrors('headOfState')}" class="invalid-feedback" th:errors="*{headOfState}"></div>
         </div>
 
         <div class="form-group">
             <label for="capital">Capital</label>
             <input type="number" id="capital" name="capital" class="form-control" th:value="${country.capital}" />
+            <div th:if="${#fields.hasErrors('capital')}" class="invalid-feedback" th:errors="*{capital}"></div>
         </div>
 
         <div class="form-group">
-            <label for="code2">Secondary Code</label>
-            <input type="text" id="code2" name="code2" class="form-control" th:value="${country.code2}" required />
+            <label for="code2">Code2</label>
+            <input type="text" id="code2" name="code2" class="form-control" th:value="${country.code2}" />
+            <div th:if="${#fields.hasErrors('code2')}" class="invalid-feedback" th:errors="*{code2}"></div>
         </div>
 
-        <button type="submit" class="btn btn-primary">Update Country</button>
+        <button type="submit" class="btn btn-primary">Save Changes</button>
     </form>
 </div>
 </body>
