--- a/src/main/resources/templates/auth/city_templates/create_city.html
+++ b/src/main/resources/templates/auth/city_templates/create_city.html
@@ -1,15 +1,68 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title th:if="${update}">Update City</title>
     <title th:if="${create}">Create City</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .card img {
+            height: 200px;
+            object-fit: cover;
+        }
+        .navbar{
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 10;
+        }
+        body{
+            padding-top: 56px;
+            margin: 0;
+        }
+        .navbar-nav .nav-item {
+            display: flex;
+            align-items: center;
+        }
+        .navbar-nav .nav-item .btn-link {
+            padding: 0;
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/auth/home">World Hopping MPO</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <span class="navbar-text mr-auto">
+            <span th:if="${#authentication.principal != null}">
+                Welcome, <span th:text="${#authentication.principal.username}">User</span>!
+            </span>
+        </span>
+        <ul class="navbar-nav ml-auto">
+            <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
+                <a class="nav-link" href="secure/manage-users">Manage Users</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/auth/my-account">My Account</a>
+            </li>
+            <li class="nav-item">
+                <form action="/logout" method="post" class = "form-inline">
+                    <input type = "hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                    <button type="submit" class="btn btn-link nav-link">Log Out</button>
+                </form>
+            </li>
+        </ul>
+    </div>
+</nav>
+
     <div class="container mt-5">
         <h1 class="text-center mb-4">Cities!</h1>
-        <form th:if="${update}" th:action="@{/api/cities/update/{id}(id=${city.getId()})}" method="post">
+        <form th:if="${update}" th:action="@{/api/cities/auth/update/{id}(id=${city.getId()})}" method="post">
             <div class="table-responsive">
                 <table class="table table-striped table-bordered">
                     <thead class="table-dark">
@@ -34,10 +87,10 @@
             </div>
             <div class="text-center mt-3">
                 <button type="submit" class="btn btn-outline-dark btn-lg">Save</button>
-                <a th:href="'/api/cities/search/' + ${city.getId()}" class="btn btn-outline-danger btn-lg">Cancel</a>
+                <a th:href="'/api/cities/auth/search/' + ${city.getId()}" class="btn btn-outline-danger btn-lg">Cancel</a>
             </div>
         </form>
-        <form th:if="${create}" th:action="@{/api/cities/create}" method="post">
+        <form th:if="${create}" th:action="@{/api/cities/auth/create}" method="post">
             <div class="table-responsive">
                 <table class="table table-striped table-bordered">
                     <thead class="table-dark">
@@ -60,7 +113,7 @@
             </div>
             <div class="text-center mt-3">
                 <button type="submit" class="btn btn-outline-dark btn-lg">Save</button>
-                <a href="/api/cities" class="btn btn-outline-danger btn-lg">Cancel</a>
+                <a href="/api/cities/auth" class="btn btn-outline-danger btn-lg">Cancel</a>
             </div>
         </form>
     </div>
