--- a/src/main/resources/templates/auth/country_language_templates/create_language.html
+++ b/src/main/resources/templates/auth/country_language_templates/create_language.html
@@ -64,7 +64,7 @@
 <div class="container mt-5">
     <h1 class="text-center mb-4">Language!</h1>
     <form th:if="${update}"
-          th:action="@{/api/languages/auth/update/{countryCode}/{language}(countryCode=${language.getCountryCode().getCode()}, language=${language.getId().getLanguage()})}"
+          th:action="@{/auth/languages/update/{countryCode}/{language}(countryCode=${language.getCountryCode().getCode()}, language=${language.getId().getLanguage()})}"
           method="post">
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
@@ -92,11 +92,11 @@
         </div>
         <div class="text-center mt-3">
             <button type="submit" class="btn btn-outline-dark btn-lg">Save</button>
-            <a th:href="'/api/languages/auth/search/' + ${language.getId().getCountryCode()} + '/' + ${language.getId().getLanguage()}"
+            <a th:href="'/auth/languages/search/' + ${language.getId().getCountryCode()} + '/' + ${language.getId().getLanguage()}"
                class="btn btn-outline-danger btn-lg">Cancel</a>
         </div>
     </form>
-    <form th:if="${create}" th:action="@{/api/languages/auth/create}" method="post">
+    <form th:if="${create}" th:action="@{/auth/languages/create}" method="post">
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
                 <thead class="table-dark">
@@ -119,7 +119,7 @@
         </div>
         <div class="text-center mt-3">
             <button type="submit" class="btn btn-outline-dark btn-lg">Save</button>
-            <a href="/api/languages/auth" class="btn btn-outline-danger btn-lg">Cancel</a>
+            <a href="/auth/languages" class="btn btn-outline-danger btn-lg">Cancel</a>
         </div>
     </form>
 </div>
