--- a/src/main/resources/templates/auth/city_templates/create_city.html
+++ b/src/main/resources/templates/auth/city_templates/create_city.html
@@ -62,7 +62,7 @@
 
     <div class="container mt-5">
         <h1 class="text-center mb-4">Cities!</h1>
-        <form th:if="${update}" th:action="@{/api/cities/auth/update/{id}(id=${city.getId()})}" method="post">
+        <form th:if="${update}" th:action="@{/auth/cities/update/{id}(id=${city.getId()})}" method="post">
             <div class="table-responsive">
                 <table class="table table-striped table-bordered">
                     <thead class="table-dark">
@@ -87,10 +87,10 @@
             </div>
             <div class="text-center mt-3">
                 <button type="submit" class="btn btn-outline-dark btn-lg">Save</button>
-                <a th:href="'/api/cities/auth/search/' + ${city.getId()}" class="btn btn-outline-danger btn-lg">Cancel</a>
+                <a th:href="'/auth/cities/search/' + ${city.getId()}" class="btn btn-outline-danger btn-lg">Cancel</a>
             </div>
         </form>
-        <form th:if="${create}" th:action="@{/api/cities/auth/create}" method="post">
+        <form th:if="${create}" th:action="@{/auth/cities/create}" method="post">
             <div class="table-responsive">
                 <table class="table table-striped table-bordered">
                     <thead class="table-dark">
@@ -113,7 +113,7 @@
             </div>
             <div class="text-center mt-3">
                 <button type="submit" class="btn btn-outline-dark btn-lg">Save</button>
-                <a href="/api/cities/auth" class="btn btn-outline-danger btn-lg">Cancel</a>
+                <a href="/auth/cities" class="btn btn-outline-danger btn-lg">Cancel</a>
             </div>
         </form>
     </div>
